# deeperfly

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
dev/: bench_ba.py  bench_jax_vs_numpy.py  bench_manual_vs_vmap.py  bench_pose2d.py  bench_video.py  check_cameras.py  precision_ba_experiment.py  run_pipeline_images.py  test_ba.ipynb
docs/: architecture.md  comparison.md  configuration.md  getting-started.md  index.md  library.md  video.md
docs/examples/: bundle_adjustment.ipynb  pipeline_walkthrough.ipynb
docs/explanation/: conventions.md  keypoints.md  pipeline.md
docs/guides/: cli.md  configuration.md  library.md
docs/javascripts/: mathjax.js
docs/keypoints/: viewer.html  viewer.js
docs/keypoints/assets/: ATTRIBUTION.txt  colors.json  keypoints.json  pose.json
docs/keypoints/assets/model/: fly.xml
docs/reference/: api.md  configuration.md  output-format.md
examples/: bundle_adjustment.ipynb  cameras.toml  config.toml  pipeline_demo.py  pipeline_walkthrough.ipynb
scripts/: README.md  build_keypoint_viewer_assets.py
src/deeperfly/: __init__.py  _jax_cpu.py  ba_state.py  bundle_adjustment.py  bundle_adjustment_jax.py  cameras.py  cli.py  config.py  correction.py  geometry.py  io.py  multiview_geom.py  multiview_geom_jax.py  pictorial.py  pipeline.py  preprocessing.py  recordings.py  results.py  skeleton.py  triangulate.py  triangulation.py  video.py  viz.py
src/deeperfly/bundle_adjustment/: __init__.py  core.py  init.py  state.py
src/deeperfly/cli/: __init__.py  app.py  console.py  gui.py  report.py  run.py
src/deeperfly/data/: default_config.toml  skeleton_fly.toml
src/deeperfly/gui/: __init__.py  corrections.py  readers.py  server.py  session.py  state.py  view.py  window.py
src/deeperfly/gui/web/: README.md  index.html
src/deeperfly/gui/web/static/: api.js  app.js  poseView.js  scene3d.js  styles.css  types.js
src/deeperfly/io/: __init__.py  base.py  images.py  video.py
src/deeperfly/jax/: bundle_adjustment.py  geometry.py
src/deeperfly/np/: bundle_adjustment.py  geometry.py
src/deeperfly/pipeline/: __init__.py  core.py  fingerprint.py  run.py  stages.py
src/deeperfly/pose2d/: __init__.py  detector.py  download.py  inference.py  model.py  models.py  pathways.py  stream.py  torch_backend.py  weights.py
src/deeperfly/pose2d/backends/: __init__.py
src/deeperfly/pose2d/backends/jax/: __init__.py  model.py  weights.py
src/deeperfly/pose2d/backends/torch/: __init__.py  model.py  weights.py
src/deeperfly/video/: __init__.py  base.py  io.py  render.py  transform.py
src/deeperfly/video/backends/: __init__.py  dali_io.py  decord_io.py  imageio_io.py  opencv_io.py  pyav_io.py  pynvvideocodec_io.py  torchcodec_io.py  video_reader_rs_io.py
src/deeperfly/visualization/: __init__.py  _palette.py  compose.py  opencv.py
src/deeperfly/viz/: __init__.py  _palette.py  compose.py  matplotlib.py  opencv.py
tests/: conftest.py  helpers.py  test_ba_weights_and_bones.py  test_bundle_adjustment.py  test_cameras.py  test_cli_config.py  test_cli_run.py  test_config.py  test_correction.py  test_fingerprint.py  test_frame_io.py  test_frame_transform.py  test_geometry.py  test_gui.py  test_gui_server.py  test_io.py  test_pathways.py  test_pictorial.py  test_pipeline.py  test_pose2d.py  test_pose2d_torch.py  test_preprocessing.py  test_recordings.py  test_results.py  test_skeleton.py  test_triangulate.py  test_triangulation.py  test_video_backends.py  test_visualization_opencv.py  test_visualization_video_cli.py  test_viz_opencv.py  test_viz_video_cli.py
