[project]
name = "deeperfly"
version = "0.1.0"
description = "Markerless 3D pose estimation of tethered Drosophila from a multi-camera rig, in JAX"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "tkclam", email = "thomas.lam@epfl.ch" },
]
keywords = [
    "pose-estimation",
    "drosophila",
    "neuroscience",
    "bundle-adjustment",
    "triangulation",
    "multi-view-geometry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    # Geometry/BA core (float64, JIT- and grad-friendly), kept on the CPU -- the
    # arrays are tiny, so a GPU never helps. CPU JAX is portable on every platform
    # and is the only JAX deeperfly installs (the detector is PyTorch).
    "jax>=0.10.1",
    # The 2D detector (PyTorch). torch loads the original DeepFly2D weights
    # directly, uses CUDA on NVIDIA GPUs (its PyPI wheel already bundles CUDA), and
    # auto-uses Metal (MPS) on Apple Silicon -- so no extra is needed for either.
    "torch>=2.2",
    "torchvision>=0.17",
    "jaxtyping>=0.3.10",
    "numpy>=2.4.6",
    "scipy>=1.14",
    "h5py>=3.11",
    "platformdirs>=4.0",
    "rich>=14.0",
    "typer>=0.26",
    "matplotlib>=3.10",
    "av>=13",
    "opencv-python-headless>=4.13",
    "natsort>=8.4.0",
]

[project.urls]
Homepage = "https://github.com/NeLy-EPFL/deeperfly"
Repository = "https://github.com/NeLy-EPFL/deeperfly"
Issues = "https://github.com/NeLy-EPFL/deeperfly/issues"

[project.scripts]
deeperfly = "deeperfly.cli:main"

[project.optional-dependencies]
# Optional alternative video read/write backends (deeperfly.video), each
# selectable via `backend=...`.
video-reader-rs = ["video-reader-rs>=0.4; sys_platform != 'darwin'"]
torchcodec = ["torchcodec>=0.1"]      # CPU decode straight into torch tensors
# Optional image-sequence decoder: OpenCV (a core dependency) reads jpg/png/... by
# default; install this for broader format support via `[io.image].reader = "imageio"`
# (and as the "auto" fallback for files OpenCV cannot decode).
imageio = ["imageio>=2.34"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
test = [
    "pytest>=9.0.3",
    "imageio>=2.34",   # exercise the optional image-reader fallback path
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-q"

[tool.ruff.lint]
ignore = ["F722", "F821"]
