[project]
name = "deeperfly"
version = "0.1.0"
description = "Markerless 3D pose estimation of tethered Drosophila from a multi-camera rig, in JAX"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "tkclam", email = "thomas.lam@epfl.ch" },
]
keywords = [
    "pose-estimation",
    "drosophila",
    "neuroscience",
    "bundle-adjustment",
    "triangulation",
    "multi-view-geometry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    # Geometry/BA core (float64, JIT- and grad-friendly), kept on the CPU -- the
    # arrays are tiny, so a GPU never helps. CPU JAX is portable on every platform
    # and is the only JAX deeperfly installs (the detector is PyTorch).
    "jax>=0.10.1",
    # The 2D detector (PyTorch). torch loads the original DeepFly2D weights
    # directly, uses CUDA on NVIDIA GPUs (its PyPI wheel already bundles CUDA), and
    # auto-uses Metal (MPS) on Apple Silicon -- so no extra is needed for either.
    "torch>=2.2",
    "torchvision>=0.17",
    "jaxtyping>=0.3.10",
    "numpy>=2.4.6",
    "scipy>=1.14",
    "h5py>=3.11",
    "platformdirs>=4.0",
    "rich>=14.0",
    "typer>=0.26",
    "av>=13",
    "opencv-python-headless>=4.13",
    "natsort>=8.4.0",
]

[project.urls]
Homepage = "https://github.com/NeLy-EPFL/deeperfly"
Documentation = "https://nely-epfl.github.io/deeperfly/"
Repository = "https://github.com/NeLy-EPFL/deeperfly"
Issues = "https://github.com/NeLy-EPFL/deeperfly/issues"

[project.scripts]
deeperfly = "deeperfly.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10",   # ad-hoc plotting in the example notebooks (not used by the package)
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
]
docs = [
    # The documentation site (MkDocs + Material). The library API reference is
    # generated from the source docstrings by mkdocstrings (griffe reads the
    # source statically, so the heavy runtime deps are not imported to build it).
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "ruff>=0.6",   # mkdocstrings uses it to format the rendered API signatures
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-q"

[tool.ruff.lint]
# Default rules (E4/E7/E9 + F) plus pycodestyle warnings (W) and import sorting (I).
# F722/F821 are off because jaxtyping uses string shape annotations (e.g.
# Float[Array, "n 3"]) that pyflakes misreads as forward references. The pyupgrade
# (UP) rules are deliberately *not* enabled for the same reason: UP037 would strip
# the quotes from those shape strings and break the annotations.
select = ["E4", "E7", "E9", "F", "W", "I"]
ignore = ["F722", "F821"]

[tool.coverage.run]
source = ["deeperfly"]
branch = true

[tool.pyright]
include = ["src/deeperfly"]
# Heavy dynamic JAX/PyTorch plus jaxtyping string annotations make strict checking
# noisy; "basic" surfaces real issues without the flood. Runs as an advisory
# (non-blocking) CI job, not in pre-commit.
typeCheckingMode = "basic"
pythonVersion = "3.11"
